--- a/PyTuts.ipynb
+++ b/PyTuts.ipynb
@@ -1497,7 +1497,124 @@
    "source": [
     "##### 4.7.2 Keyword Arguments\n",
     "\n",
-    "Functions can also be called using keyword arguments of the form kwarg=value"
+    "Functions can also be called using keyword arguments of the form kwarg=value. For instance, the following function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parrot(voltage, state='a stuff', action='voom', type='Norwegian Blue'):\n",
+    "    print(\"-- This parrot wouldn't\", action, end=' ')\n",
+    "    print(\"if you put\", voltage, \"volts through it.\")\n",
+    "    print(\"-- Lovely plumage, the\", type)\n",
+    "    print(\"-- It's\", state, \"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't voom if you put 100 volts through it.\n",
+      "-- Lovely plumage, the Norwegian Blue\n",
+      "-- It's a stuff !\n"
+     ]
+    }
+   ],
+   "source": [
+    "parrot(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't voom if you put 1000 volts through it.\n",
+      "-- Lovely plumage, the Norwegian Blue\n",
+      "-- It's a stuff !\n"
+     ]
+    }
+   ],
+   "source": [
+    "parrot(voltage=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't voom if you put 1000 volts through it.\n",
+      "-- Lovely plumage, the Norwegian Blue\n",
+      "-- It's a stuff !\n"
+     ]
+    }
+   ],
+   "source": [
+    "parrot(voltage = 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't VOOOOOM if you put 1000000 volts through it.\n",
+      "-- Lovely plumage, the Norwegian Blue\n",
+      "-- It's a stuff !\n"
+     ]
+    }
+   ],
+   "source": [
+    "parrot(voltage=1000000, action='VOOOOOM')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't jump if you put a million volts through it.\n",
+      "-- Lovely plumage, the Norwegian Blue\n",
+      "-- It's bereft of life !\n"
+     ]
+    }
+   ],
+   "source": [
+    "parrot('a million', 'bereft of life','jump')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parrt('a thousand'),state"
    ]
   }
  ],
