--- a/PyTuts.ipynb
+++ b/PyTuts.ipynb
@@ -31,7 +31,7 @@
     "16. [ ] Appendix\n",
     "\n",
     "## 1. Whetting Your appetite\n",
-    "- Python allows you to split your program into modules that can be reused in other Python programs. (file I/O, system calls, sockets, and even intergaces to graphical user interface toolkits like Tk)\n",
+    "- Python allows you to split your program into modules that can be reused in other Python programs. (file I/O, system calls, sockets, and even interfaces to graphical user interface toolkits like Tk)\n",
     "\n",
     "- Python is an interpreted language, which can save you considerable time during program development because no compilation and linking is necessary. The interpreter can be used interactively, which makes it easy to experiment with features of the language, to write throw-away programs, or to test functions during bottom-up programming development.\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "- Integer numbers have type int, the ones with a fractional part have type float. Division always returns a float.\n",
     "- To do floor division and get an integer result you can use the  // operator.\n",
-    "- With Python, it is possible to use the ** operatory to calculate powers 5 ** 2 --> 25\n",
+    "- With Python, it is possible to use the ** operatore to calculate powers 5 ** 2 --> 25\n",
     "- There is full support for floating point; operators with mixed type operands convert the integer operand to floating point:"
    ]
   },
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- In interactive mode, the last printed expression is  assigned to the variable _ This means that when you are using Python as a desl calculator, it is somewhat easier to continue calculations, for example:"
+    "- In interactive mode, the last printed expression is  assigned to the variable _ This means that when you are using Python as a desk calculator, it is somewhat easier to continue calculations, for example:"
    ]
   },
   {
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1610,11 +1610,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't voom if you put a thousand volts through it.\n",
+      "-- Lovely plumage, the Norwegian Blue\n",
+      "-- It's pushing up the daisies !\n"
+     ]
+    }
+   ],
+   "source": [
+    "parrot('a thousand', state='pushing up the daisies') # 1 poisitional, 1 keyword"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following are invalid calls:\n",
+    "\n",
+    "parrot()  \n",
+    "\n",
+    "parrot(voltage=5.0, 'dead') #non-keyword argument after a keyword argument\n",
+    "\n",
+    "parrot(110, voltage=220)  #duplicate value for the same argument\n",
+    "\n",
+    "parrot(actor='John Cleese')  #unknown keyword argument"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a function call, keyword arguments must follow positional arguments. All the keyword arguments passed must match one of the arguments accepted by the function (e.g. actor is not a valid argument for the parrot function), and their order is not important. This also includes non-optional arguments (e.g. parrot(voltage=1000) is valid too). No argument may recieve a value more than once. Here's an example that fails due to this restriction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "function() got multiple values for argument 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-0658d145b8a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mfunction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: function() got multiple values for argument 'a'"
+     ]
+    }
+   ],
+   "source": [
+    "def function(a):\n",
+    "    pass\n",
+    "\n",
+    "function(0, a=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When a final formal parameter of the form ****name** is present it recieves a dictionary (see Mapping Types - dict) containing all keyword arguments except for those corresponding to a formal parameter. This may be combined with a formal parameter of the form ***name** (described in the next subsection) which recieves a tuple containing the positional arguments beyond the parameter list. (***name** must occur before ****name**.) For example, if we define a function like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parrt('a thousand'),state"
+    "def cheeseshop(kind, *arguments, **keywords):\n",
+    "    print(\"-- Do you have any\", kind, \"?\")\n",
+    "    print(\"-- I'm sorry, we're all out of\", kind)\n",
+    "    for arg in arguments:\n",
+    "        print(arg)\n",
+    "    print(\"-\" * 40)\n",
+    "    for kw in keywords:\n",
+    "        print(kw, \":\", keywords[kw])\n",
+    "        \n",
+    "    print(type(arguments))\n",
+    "    print(type(keywords))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Do you have any Limburger ?\n",
+      "-- I'm sorry, we're all out of Limburger\n",
+      "It's very runny, sir.\n",
+      "It's really very, VERY runny, sir\n",
+      "----------------------------------------\n",
+      "shopkeeper : Michael Palin\n",
+      "sketch : Cheese Shop Sketch\n",
+      "client : John Cleese\n",
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "cheeseshop(\"Limburger\", \"It's very runny, sir.\",\n",
+    "          \"It's really very, VERY runny, sir\",\n",
+    "          shopkeeper=\"Michael Palin\",\n",
+    "          client=\"John Cleese\",\n",
+    "           sketch=\"Cheese Shop Sketch\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.7.3 Arbitrary Argument Lists\n",
+    "\n",
+    "Finally, the least frequently used option is to specify that a function can be called with an arbitrary number of arguments. These arguments will be wrapped up in a tuple (see Tuples and Sequences). Before the variable number of arguments, zero or more normal arguments may occur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_multiple_items(file, separator, *args):\n",
+    "    file.write(separator.join(args))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normally, these variadic arguments will be last in the list of formal parameters, because they scoop up all remaining input arguments that are passed to the function. Any formal parameters which occur after the ***args parameter** are 'keyword-only' arguments, meaning that they can only be used as keywords rather than positional arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'earth.mars.venus'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def concat(*args, sep=\"/\"):\n",
+    "    return sep.join(args)\n",
+    "\n",
+    "concat(\"earth\", \"mars\", \"venus\")\n",
+    "concat(\"earth\", \"mars\", \"venus\", sep=\".\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.7.4 Unpacking Argument Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reverse situation occurs when the arguments are already in a list or tuple but need to be unpacked for a function call requiring separate positional arguments. For instance, the built-in range() function expects separate start and stop arguments. If they are not available separately, write the function call with the ***-operator to unpack** the arguments out of a list or tuple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(3,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "args=[3,6]\n",
+    "list(range(*args)) #Call with arguments unpacked from a list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the same fashion, dictionaries can deliver keyword arguments with the **-operator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- This parrot wouldn't VOOM if you put four million volts through it. E's bleedin' demised !\n"
+     ]
+    }
+   ],
+   "source": [
+    "def parrot(voltage, state='a stiff', action='voom'):\n",
+    "    print(\"-- This parrot wouldn't\", action, end=' ')\n",
+    "    print(\"if you put\", voltage, \"volts through it.\", end=' ')\n",
+    "    print(\"E's\", state, \"!\")\n",
+    "    \n",
+    "d = {\"voltage\":\"four million\", \"state\":\"bleedin' demised\", \"action\":\"VOOM\"}\n",
+    "parrot(**d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.7.5 Lambda Expressions\n",
+    "Small anonymous functions can be created with the lambda keyword. This function returns the sum of its two arguments: lambda a, b: a+b. Lambda functions can be used wherever function objects are required. They are syntactically restricted to a single expression. Semantically, they are just syntactic sugar for a normal function definition. Like nested function definitions, lambda functions can reference variables from the containing scope:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def make_incrementor(n):\n",
+    "    return lambda x: x + n\n",
+    "\n",
+    "f=make_incrementor(42)\n",
+    "g=make_incrementor(1)\n",
+    "g(1)\n",
+    "f(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above example uses a lambda expression to return a function. Another use is to pass a small function as an argument:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 'four'), (1, 'one'), (3, 'three'), (2, 'two')]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
+    "pairs.sort(key=lambda pair: pair[1])\n",
+    "pairs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.7.6 Documentation Strings\n",
+    "Here are some conventions about the content and formatting of document strings. The first line should always be a short, concise summary of the object's purpose. For brevity, it shold not explicitly state the object's name or type, since these are available by other means (except if the name happens to be a verb describing a function's operation). This line should begin with a capital letter and end with a period.\n",
+    "\n",
+    "If there are more lines in the documentation string, the second line should be black, visually separating the summary from the rest of the description. The following lines should be one or more paragraphs describing the object's calling conventions, its side effects, etc.\n",
+    "\n",
+    "The Python parser does not strip indentation from multi-line string literals in Python, so tools that process documentation have to strip indentation if desired. This is done using the following convention. The first non-blank line after the first line of the string determines the amount of indentation for the entire documentation string. (We can't use the first line since it is generally adjacent to the string's opening quotes so its indentation is not apparent in the string literal.) Whitespace \"equivalent\" to this indentation is then stripped from the start of all lines of the string. Lines that are indented less should not occur, but if they occur tall their leading whitespace should be stripped. Equivalence of whitespace should be tested after expansion of tabs (to 8 spaces, normally).\n",
+    "\n",
+    "Heres an example of a multi-line docstring:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do nothing, but document it.\n",
+      "    \n",
+      "    No, really, it doesn't do anything.\n",
+      "    what about now\n",
+      "    asd\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function():\n",
+    "    \"\"\"Do nothing, but document it.\n",
+    "    \n",
+    "    No, really, it doesn't do anything.\n",
+    "    what about now\n",
+    "    asd\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "print(my_function.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.7.7 Function Annotations\n",
+    "\n",
+    "Function annotations are completely optional metadata information about the types used by user-defined functions..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.8. Intermezzo: Coding Style\n",
+    "\n"
    ]
   }
  ],
